--- a/index.html
+++ b/index.html
@@ -114,12 +114,29 @@ Para mais informações acesse: </p>
   </ul>
     </ul>
 <footer>
+  Aperte "f5" para reiniciar o game
 
 criado por 
      <br> 
  Rayan Trindade
 
 </footer>
+<title>Block Jump Game</title>
+  <link rel="stylesheet" href="style.css">
+  <script defer src="main.js"></script>
+</head>
+<body>
+    
+   <h1 class="score">Score : 0
+   </h1> 
+   <div class="tv">
+     <div class="player"></div>
+     <div class="enemy"></div>
+   </div> 
+ 
+
+
+
     
   </div>
   
