--- a/index.html
+++ b/index.html
@@ -114,7 +114,9 @@ Para mais informações acesse: </p>
   </ul>
     </ul>
 <footer>
-  Aperte "f5" para reiniciar o game
+  No computador pressione "f5" para reiniciar o game.<br>
+  No celular atualize a 
+página.<br>
 
 criado por 
      <br> 
