add index add style

--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@ Para mais informações acesse: </p>
   </ul>
     </ul>
 <footer>
-  No computador pressione "f5" para reiniciar o game.<br>
-  No celular atualize a 
+  Para reiniciar o game pressione "f5" ou atualize a 
 página.<br>
+
 
 criado por 
      <br> 
